--- a/Frontend/src/styles/AllGigDetails.css
+++ b/Frontend/src/styles/AllGigDetails.css
@@ -4,7 +4,8 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    margin-bottom: 20px;
+    margin: 20px;
+    width: 30;
   }
   
   .gig-title {
